fix filter buttons on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .app {
-	width: 90vw;
+	width: 95vw;
 	max-width: 700px;
 }
 
